Fixing layout issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,8 +13,8 @@
   width: 100%;
 }
 .griiid__wrapper {
-  transform: translate3d(var(--rulerSize), var(--rulerSize), 0);
-  width: calc(100% - var(--rulerSize));
+  transform: translate3d(calc(var(--rulerSize) + var(--toolBarWidth)), var(--rulerSize), 0);
+  width: calc(100% - var(--toolBarWidth) - var(--rulerSize));
   height: calc(100% - var(--rulerSize));
 }
 #griiid__root {
